# Playground

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  msvc.yml
include/playground/: amplifier.hpp  base_audio_element.cpp  base_audio_element.hpp  filter.hpp  input_manager.hpp  note.hpp  oscillator.hpp  renderer.hpp  synthetizer.hpp  user_interface.hpp
src/: main.cpp
src/playground/: amplifier.cpp  base_audio_element.cpp  filter.cpp  input_manager.cpp  main_old.cpp  note.cpp  oscillator.cpp  renderer.cpp  synthetizer.cpp  user_interface.cpp
src/playground/shaders/: shader.frag  shader.vert
